changes page name

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Jose's DS Blog</title>
+		<title>DS Blog</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<!-- Main CSS -->
@@ -64,7 +64,7 @@
             <h4 class="font-italic">About</h4>
             <p class="mb-0">I'm a Data Scientist, Analyst and Engineer from San Antonio, TX.
 						                Once upon a time a musician, I now spend my days learning about things like
-						                regression analysis and latent dirichlet allocation. Currently 
+						                regression analysis and latent dirichlet allocation. Currently
 						                in search of new opportunities...</p>
           </div>
 
@@ -82,7 +82,7 @@
 			<div class="footer">
 				<p>© 2020 <a href="http://www.josemarquez.tech">josemarquez.tech</a></p>
 			</div>
-	
+
 		<!-- END OF MAIN CONTAINER -->
 		</div>
 
@@ -94,5 +94,3 @@
 
 	</body>
 </html>
-
-
