adds links to repo material

--- a/_posts/2020-08-25-the-tech-job-hiring-landscape.html
+++ b/_posts/2020-08-25-the-tech-job-hiring-landscape.html
@@ -230,3 +230,6 @@ by.</p>
 	 I encourage those seeking employment in the tech sector during this difficult
 	 period to keep looking and learning; although hiring may have slowed,
 	 opportunities still exist for driven individuals to enter the industry.</p>
+
+<p>Thanks for reading! Check out the main <a href="https://github.com/jose-marquez89/tech-job-landscape/blob/master/jupyter_notebooks/jobs_explore.ipynb">Jupyter Notebook</a> and the <a href="https://github.com/jose-marquez89/tech-job-landscape">Repo</a> for this
+   analysis!</p>
