makes first paragraph a little shorter

--- a/_posts/2020-08-25-the-tech-job-hiring-landscape.html
+++ b/_posts/2020-08-25-the-tech-job-hiring-landscape.html
@@ -15,7 +15,10 @@ experience for another post), I have a vested interest in understanding the
 current state of hiring affairs. If you’ve stumbled across this blog post from the
 future, I would confidently assume your familiarity with COVID-19
 and its impact on everything from mundane errands to the most
-salient political matters. With the restrictions imposed by the virus on social
+salient political matters. Many job seekers probably expected a decrease in job availability,
+and while that did appear to occur, a steady stream of jobs still exists.</p>
+
+<p>With the restrictions imposed by the virus on social
 proximity, hiring for jobs that would normally require an in-person interview
 saw a dramatic change almost overnight. When I began my foray into Lambda
 School’s Data Science program, I was advised to set my sights <em>away</em> from remote
